# dtde-lab

./: .gitignore  DEMO_GUIDE.md  LICENSE  README.md  REFERENCES.bib  pyproject.toml  requirements.txt
dtde/: __init__.py  decision.py  metrics.py  models.py  simulation.py  telemetry.py
experiments/: reproduce_paper_results.py  run_experiment_baseline_vs_dtde.py  verify_step1_functional.py  verify_step2_performance.py  visualize_results.py
