[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dtde"
version = "0.1.0"
description = "Dynamic Traffic Decision Engine (DTDE) lab and experiments"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["dtde"]
